raw/NAUFAL ASWITA AMANULLAH MUHAMMAD 6420 245150207111060/2024-11-14-08-33-01.ceg/compilation.txt
NT.java:35: error: variable akhir might not have been initialized
		int akhir=bagi(akhir)/2;
		               ^
1 error
Not compiled
